
version 5.0-alpha8 (2015-10-20)
    * Caches exceptions emitted by JWTAssertionClaimsSetVerifier.
    * Caches exceptions emitted by JWTAuthenticationClaimsSetVerifier.

version 5.0-alpha9 (2015-10-30)
    * Adds GeneralException(ErrorObject) constructor.

version 5.0-alpha10 (2015-11-09)
    * Adds Audience.create(String[]) static helper.
    * Adds Audience.matchesAny(Collection<Audience>,Collection<Audience>)
      static helper.

version 5.0-alpha11 (2015-11-10)
    * Adds support for nested (JWS-signed then JWE-encrypted) JWT bearer
      assertions.

version 5.0-alpha12 (2015-11-25)
    * Implements OAuth 2.0 token introspection (RFC 7662) request and response
      classes.
    * Adds OIDCProviderMetadata support for custom (not registered) parameters.
    * Adds helper ClientMetadata.hasScopeValue method.

version 5.0-alpha13 (2015-12-02)
    * Adds IDTokenVerifier.
    * Adds JWSVerificationKeySelector for verifying JWS objects in OpenID
      Connect.
    * Adds JWEDecryptionKeySelector for decrypting JWE objects in OpenID
      Connect.
    * Adds JWKSource interface with client secret, local JWK set and remote
      JWK set implementations.
    * Moves Resource, ResourceRetriever and DefaultResourceRetriever to http
      package.
    * Creates RestrictedResourceRetriever interface which permits setting of
      HTTP connection timeout, HTTP read timeout and HTTP entity size limit.
    * Lets DefaultResourceRetriever implement RestrictedResourceRetriever.

version 5.0-alpha14 (2015-12-08)
    * Fixes cache update bug in RemoteJWKSet.
    * Simplifies JWEDecryptionKeySelector.
    * Updates ImmutableClientSecret and ImmutableJWKSet.
    * Modifies KeyConverter.toJavaKeys to include private keys.
    * Upgrades to Nimbus JOSE+JWT 4.10.

version 5.0-alpha15 (2015-12-08)
    * Adds clock skew support to IDTokenVerifier and IDTokenClaimsVerifier.

version 5.0-alpha16 (2015-12-13)
    * Adds SAML 2.0 assertion package.
