@@ -408,4 +408,6 @@ version 5.0-alpha15 (2015-12-08)
 
 version 5.0-alpha16 (2015-12-13)
     * Adds SAML 2.0 assertion package.
+    * Renames IDTokenVerifier to IDTokenValidator to fix terminology and
+      compliance with spec.
 
